--- a/webui/package.json
+++ b/webui/package.json
@@ -14,9 +14,12 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "nanoajax": "^0.4.3"
+    "nanoajax": "^0.4.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
