--- a/webui/package.json
+++ b/webui/package.json
@@ -22,6 +22,7 @@
     "mocha": "^3.2.0",
     "must": "^0.13.4",
     "react-addons-test-utils": "^15.4.2",
+    "sinon": "^2.1.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
