--- a/webui/package.json
+++ b/webui/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.23.0",
     "enzyme": "^2.7.1",
+    "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
     "must": "^0.13.4",
